# OCEAN

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  setup.cfg  tox.ini
.github/workflows/: lint.yml  publish.yml  python-app.yml  test.yml
datasets/: Adult_processedMACE.csv  COMPAS-ProPublica_processedMACE.csv  Credit-Card-Default_processedMACE.csv  German-Credit-data-edited-v2.csv  German-Credit.csv  Phishing.csv  Spambase.csv  Students-Performance-MAT.csv
examples/: maxsat_example.py  query.py  random_forest.py  random_forest_cp.py  readme.py  simple_example_both.py  xgb.py
examples/datasets/: __init__.py  adult.py  compas.py  credit.py
maceUpdatedForOceanBenchmark/: .gitignore  generateSATExplanations.py  parseScalabilityDepth_FT.py  parseScalabilityDepth_MACE.py  parseScalabilityNbTrees_FT.py  parseScalabilityNbTrees_MACE.py
maceUpdatedForOceanBenchmark/_data_counterfactuals/: Credit-Card-Default_processedMACE.csv  German-Credit.csv  OnlineNewsPopularity.csv  Spambase.csv
maceUpdatedForOceanBenchmark/_data_main/: German-Credit-processed.csv  Phishing-processed.csv  Phishing.csv  Spambase-processed.csv  Spambase.csv  Students-Performance-MAT-processed.csv  process_german_data.py  process_online_data.py  process_phishing_data.py  process_spambase_data.py
ocean/: __init__.py  base.py
ocean/_explainers/: _mip.py
ocean/abc/: __init__.py  _mapper.py  indexer.py  mapper.py
ocean/cp/: __init__.py  _base.py  _explainer.py  _explanation.py  _model.py  _solver.py
ocean/datasets/: __init__.py  _load.py  adult.py  compas.py  credit.py  load.py
ocean/ensemble/: __init__.py  ensemble.py
ocean/explainer/: __init__.py  _mip.py  mip.py
ocean/explainers/: __init__.py
ocean/feature/: __init__.py  _feature.py  _keeper.py  _parse.py  feature.py  keeper.py  mapper.py  parse.py  variable.py
ocean/maxsat/: __init__.py  _base.py  _env.py  _explainer.py  _explanation.py  _model.py  _solver.py
ocean/mip/: __init__.py  _base.py  _ensemble.py  _explainer.py  _explanation.py  _feature.py  _garbage.py  _model.py  _solution.py  _typing.py  (+3 more)
src/: BuildCounterFactualSeekedSet.py  ClassifierCounterFactual.py  CounterFactualParameters.py  CounterfactualMilp.py  CuiRandomForestCounterFactual.py  DatasetReader.py  DecisionTreeCounterFactual.py  RandomAndIsolationForest.py  RandomForestCounterFactual.py  RandomForestCounterfactual.py  RfClassifierCounterFactual.py  RunExperimentsRoutines.py  TreeMilpManager.py  build_counterfactual_set.py  checkSamples.py  dataProcessing.py  experiment_routines.py  runBenchmarkWithMace.py  runPaperExperiments.py  run_paper_experiments.py  writeResults.py  write_legend.py
test/: test_BuildCounterFactualSeekedSet.py  test_ClassifierCounterFactual.py  test_DatasetReader.py  test_DecisionTreeCounterFactual.py  test_RandomAndIsolationForest.py  test_RandomForestCounterFactual.py  test_RfClassifierCounterFactualMilp.py  test_RunExperimentsRoutines.py  test_TreeMilpManager.py  test_build_counterfactual_set.py  test_dataProcessing.py
tests/: test_explainer.py  utils.py
ui/: main.py  mainTest.py  main_iterative_interface.py  main_static_interface.py  uiRequirements.txt
(+301 files in other folders)
